# Zarathustra

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  build.sh  build_release.sh  dev.Dockerfile  integration_test.sh  vercel.json  zarathustra.rs
.circleci/: config.yml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  doc_request.yml  feature.yml  feature_request.md
.github/actions/sccache/: action.yml
.github/workflows/: bench_pr.yml  deploy-backend.yml  deploy-zarathustra.yml  main.yml  nightly.yml  publish-zarathustra-js.yml  publish-zarathustra-npm.yml  release.yml  website.yml
scripts/: changelog.sh  one_liner.sh  release.sh
zarathustra/: DEPLOY.md  DEPLOY_VERCEL.md
zarathustra/web/: .gitignore  DEPLOY_QUICK.md  Dockerfile  docker-compose.yml  ecosystem.config.js  package-lock.json  package.json  server.js  vercel.json  zarathustra.service
zarathustra/web/public/: demo.html  index.html  package.json
zarathustra_abi/: Cargo.toml
zarathustra_abi/src/: lib.rs
zarathustra_analysis/: Cargo.toml
zarathustra_analysis/src/: assembly_transformer.rs  boolean_array_comparator.rs  condition_redefiner.rs  constant_argument_checker.rs  constant_resolver.rs  dead_code.rs  expression_validator.rs  flat_propagation.rs  flatten_complex_types.rs  lib.rs  log_ignorer.rs  out_of_bounds.rs  panic_extractor.rs  propagation.rs  struct_concretizer.rs  uint_optimizer.rs  variable_write_remover.rs  zir_propagation.rs
zarathustra_analysis/src/reducer/: constants_reader.rs  constants_writer.rs  inline.rs  mod.rs  shallow_ssa.rs
zarathustra_ark/: Cargo.toml
zarathustra_ark/src/: gm17.rs  groth16.rs  lib.rs  marlin.rs
zarathustra_ast/: Cargo.toml
zarathustra_ast/src/common/: embed.rs
zarathustra_ast/src/flat/: folder.rs  mod.rs  utils.rs
zarathustra_ast/src/ir/: check.rs  clean.rs  expression.rs  folder.rs  from_flat.rs  mod.rs  serialize.rs  smtlib2.rs  solver_indexer.rs  visitor.rs  witness.rs
zarathustra_ast/src/typed/: abi.rs  folder.rs  integer.rs  mod.rs  result_folder.rs  types.rs  uint.rs
zarathustra_ast/src/typed/utils/: mod.rs
zarathustra_ast/src/untyped/: from_ast.rs  node.rs
zarathustra_ast/src/zir/: canonicalizer.rs  folder.rs  lqc.rs  mod.rs  result_folder.rs  uint.rs
zarathustra_bellman/: Cargo.toml
zarathustra_bellman/src/: groth16.rs  lib.rs
zarathustra_bellperson/: Cargo.toml
zarathustra_bellperson/examples/: 10_cubes.rs
zarathustra_bellperson/src/: lib.rs  nova.rs
zarathustra_book/: book.toml
zarathustra_book/src/: SUMMARY.md  gettingstarted.md  introduction.md  testing.md
zarathustra_book/src/examples/: index.md  magic_square.md  rng_tutorial.md  sha256example.md
zarathustra_book/src/language/: assembly.md  comments.md  constants.md  control_flow.md  functions.md  generics.md  imports.md  logging.md  macros.md  types.md  variables.md
zarathustra_book/src/toolbox/: abi.md  cli.md  experimental.md  index.md  ir.md  proving_schemes.md  stdlib.md  trusted_setup.md  zokrates_js.md
zarathustra_circom/: Cargo.toml
zarathustra_circom/src/: lib.rs  r1cs.rs  witness.rs
zarathustra_cli/: Cargo.toml
zarathustra_cli/examples/book/mpc_tutorial/: test.sh
zarathustra_cli/examples/book/rng_tutorial/: test.sh
zarathustra_cli/examples/book/sha256_tutorial/: test.sh
zarathustra_cli/src/: bin.rs  cli_constants.rs
zarathustra_cli/src/ops/: check.rs  compile.rs  compute_witness.rs  export_verifier.rs  generate_proof.rs  generate_smtlib2.rs  inspect.rs  print_proof.rs  profile.rs  setup.rs  universal_setup.rs  verify.rs
zarathustra_cli/src/ops/mpc/: beacon.rs  contribute.rs  export.rs  init.rs  verify.rs
zarathustra_cli/src/ops/nova/: compress.rs  prove.rs  setup.rs  verify.rs
zarathustra_cli/tests/: integration.rs
zarathustra_cli/tests/code/: arithmetics.smt2  conditional_false.smt2  multidim_update.smt2  no_return.smt2  return_array.smt2  simple_add.smt2  simple_mul.smt2  taxation.smt2
zarathustra_codegen/: Cargo.toml
zarathustra_codegen/src/: lib.rs  utils.rs
zarathustra_common/: Cargo.toml
zarathustra_core/: Cargo.toml
zarathustra_core/src/: compile.rs  imports.rs  macros.rs  semantics.rs
zarathustra_core/src/optimizer/: canonicalizer.rs  directive.rs  duplicate.rs  mod.rs  redefinition.rs  tautology.rs
zarathustra_core_test/: Cargo.toml  build.rs
zarathustra_core_test/tests/tests/snark/: snark_verify_bls12_377_1.zok  snark_verify_bls12_377_2.zok  snark_verify_bls12_377_5.zok
zarathustra_embed/: Cargo.toml
zarathustra_embed/src/: ark.rs  bellman.rs
zarathustra_field/: Cargo.toml
zarathustra_fs_resolver/: Cargo.toml
zarathustra_fs_resolver/src/: lib.rs
zarathustra_interpreter/: Cargo.toml
zarathustra_interpreter/src/: lib.rs
zarathustra_js/: Cargo.toml  Dockerfile  README.md  build.rs  build.sh  index.d.ts  package-lock.json  package.json  publish.sh
zarathustra_js/src/: lib.rs
zarathustra_js/tests/: tests.js
zarathustra_js/tests/umd/: index.html
zarathustra_parser/: Cargo.toml  README.md
zarathustra_parser/src/: lib.rs
zarathustra_parser/src/textmate/: CHANGELOG.md  README.md  package.json  zokrates.tmLanguage.yaml
zarathustra_pest_ast/: Cargo.toml  README.md
zarathustra_pest_ast/src/: lib.rs
zarathustra_profiler/: Cargo.toml
zarathustra_profiler/src/: lib.rs
zarathustra_proof_systems/: Cargo.toml
zarathustra_proof_systems/src/: lib.rs  solidity.rs  tagged.rs
zarathustra_proof_systems/src/scheme/: gm17.rs  groth16.rs  marlin.rs  mod.rs
zarathustra_stdlib/: Cargo.toml  build.rs
zarathustra_stdlib/tests/tests/snark/: gm17.zok
zarathustra_test/: Cargo.toml
zarathustra_test/src/: lib.rs
zarathustra_test/tests/: out_of_range.rs  wasm.rs
zarathustra_test_derive/: Cargo.toml  test_template
