[package]
name = "zarathustra_analysis"
version = "0.1.3"
edition = "2021"

[features]
default = ["ark", "bellman"]
ark = ["zarathustra_ast/ark", "zarathustra_embed/ark", "zarathustra_common/ark"]
bellman = ["zarathustra_ast/bellman", "zarathustra_embed/bellman", "zarathustra_common/bellman"]

[dependencies]
log = "0.4"
cfg-if = "0.1"
num = { version = "0.1.36", default-features = false }
num-bigint = { version = "0.2", default-features = false }
lazy_static = "1.4"
# serialization and deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
zarathustra_field = { version = "0.5.0", path = "../zarathustra_field", default-features = false }
zarathustra_pest_ast = { version = "0.3.0", path = "../zarathustra_pest_ast" }
zarathustra_common = { version = "0.1", path = "../zarathustra_common", default-features = false }
zarathustra_embed = { version = "0.1.0", path = "../zarathustra_embed", default-features = false }
zarathustra_ast = { version = "0.1", path = "../zarathustra_ast", default-features = false }

[dev-dependencies]
pretty_assertions = "0.6.1"