[package]
name = "zarathustra_bellperson"
version = "0.1.0"
edition = "2021"

[features]

[dependencies]
zarathustra_field = { version = "0.5", path = "../zarathustra_field", features = ["bellperson_extensions"] }
zarathustra_ast = { version = "0.1", path = "../zarathustra_ast", features = ["bellperson"] }
# zarathustra_proof_systems = { version = "0.1", path = "../zarathustra_proof_systems", default-features = false }
bellperson = { package = "bellperson", version = "^0.25", default-features = false }
rand_0_4 = { version = "0.4", package = "rand" }#
getrandom = { version = "0.2", features = ["js", "wasm-bindgen"] }
hex = "0.4.2"
pairing = "0.22"
ff = { version = "0.13.0", default-features = false }
nova-snark = { version = "0.21.0" }
zarathustra_interpreter = { version = "0.1", path = "../zarathustra_interpreter" }
serde = { version = "1.0", features = ["derive"] }


[dev-dependencies]
typed-arena = "1.4.1"
rand_0_4 = { version = "0.4", package = "rand" }
getrandom = { version = "0.2", features = ["js", "wasm-bindgen"] }
hex = "0.4.2"
pairing = "0.22"
pasta_curves = { version = "0.5", features = ["repr-c", "serde"] }
zarathustra_core = { version = "0.7.3", path = "../zarathustra_core" }





