[package]
name = "zarathustra_circom"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zarathustra_ast = { version = "0.1", path = "../zarathustra_ast", default-features = false }
zarathustra_field = { version = "0.5.0", path = "../zarathustra_field", default-features = false }
byteorder = "1.4.3"

[dev-dependencies]
pretty_assertions = "1.2.1"
zkutil = "0.5.0"
bellman_ce = { version = "^0.3" }