[package]
name = "zarathustra_core"
version = "0.7.6"
edition = "2021"
authors = ["Jacob Eberhardt <jacob.eberhardt@tu-berlin.de>", "Dennis Kuhnert <mail@kyroy.com>"]
repository = "https://github.com/SURUJ404/zarathustra"
readme = "README.md"

[features]
default = ["ark", "bellman", "bellperson"]
ark = ["zarathustra_ast/ark", "zarathustra_embed/ark", "zarathustra_common/ark", "zarathustra_interpreter/ark", "zarathustra_codegen/ark", "zarathustra_analysis/ark"]
bellman = ["zarathustra_ast/bellman", "zarathustra_embed/bellman", "zarathustra_common/bellman", "zarathustra_interpreter/bellman", "zarathustra_codegen/bellman", "zarathustra_analysis/bellman"]
bellperson = ["zarathustra_ast/bellperson", "zarathustra_common/bellperson"]

[dependencies]
log = "0.4"
cfg-if = "0.1"
num = { version = "0.1.36", default-features = false }
num-bigint = { version = "0.2", default-features = false }
lazy_static = "1.4"
typed-arena = "1.4.1"
# serialization and deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
zarathustra_field = { version = "0.5.0", path = "../zarathustra_field", default-features = false }
zarathustra_pest_ast = { version = "0.3.0", path = "../zarathustra_pest_ast" }
zarathustra_common = { version = "0.1", path = "../zarathustra_common", default-features = false }
zarathustra_embed = { version = "0.1.0", path = "../zarathustra_embed", default-features = false }
zarathustra_interpreter = { version = "0.1", path = "../zarathustra_interpreter", default-features = false }
zarathustra_codegen = { version = "0.1", path = "../zarathustra_codegen", default-features = false }
zarathustra_analysis = { version = "0.1", path = "../zarathustra_analysis", default-features = false }
zarathustra_ast = { version = "0.1", path = "../zarathustra_ast", default-features = false }
