[package]
name = "zarathustra_core_test"
version = "0.2.11"
authors = ["schaeff <thibaut@schaeff.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
zarathustra_test = { version = "0.2", path = "../zarathustra_test" }

[build-dependencies]
zarathustra_test_derive = { version = "0.0", path = "../zarathustra_test_derive" }
