[package]
name = "zarathustra_interpreter"
version = "0.1.5"
edition = "2021"

[features]
default = ["bellman", "ark"]
bellman = ["zarathustra_field/bellman_extensions", "pairing_ce", "zarathustra_embed/bellman", "zarathustra_ast/bellman", "zarathustra_analysis/bellman"]
ark = ["ark-bls12-377", "zarathustra_embed/ark", "zarathustra_ast/ark", "zarathustra_analysis/ark"]

[dependencies]
zarathustra_field = { version = "0.5", path = "../zarathustra_field", default-features = false }
zarathustra_ast = { version = "0.1", path = "../zarathustra_ast", default-features = false }
zarathustra_embed = { version = "0.1.0", path = "../zarathustra_embed", default-features = false }
zarathustra_abi = { version = "0.1", path = "../zarathustra_abi", default-features = false }
zarathustra_analysis = { version = "0.1", path = "../zarathustra_analysis", default-features = false }
num = { version = "0.1.36", default-features = false }
num-bigint = { version = "0.2", default-features = false }
ark-bls12-377 = { version = "^0.3.0", features = ["curve"], default-features = false, optional = true }
pairing_ce = { version = "^0.21", optional = true }
serde = { version = "1.0", features = ["derive"] }

