[package]
name = "zarathustra_proof_systems"
version = "0.1.3"
edition = "2021"

[dependencies]
zarathustra_ast = { version = "0.1", path = "../zarathustra_ast", default-features = false }
serde = { version = "1.0", features = ["derive"] }
zarathustra_field = { version = "0.5.0", path = "../zarathustra_field", default-features = false }
hex = "0.4.2"
regex = "0.2"
cfg-if = "0.1"
ethabi = "17.0.0"
primitive-types = { version = "0.11", features = ["rlp"] }
rand_0_8 = { version = "0.8", package = "rand" }
blake2 = "0.8.1"
byteorder = "1"